--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,6 +58,12 @@ jobs:
 
           df -h
 
+      - name: 同步最新的源码
+        run: |
+          git remote add openwrt https://github.com/coolsnowwolf/lede.git
+          git pull openwrt master
+          git remote -v
+
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
