--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -48,9 +48,7 @@ jobs:
 
       - name: Update feeds
         run: |
-          echo 'src-git helloworld https://github.com/fw876/helloworld' >> ./feeds.conf.default
-          echo 'src-git openclash https://github.com/vernesong/OpenClash.git' >> ./feeds.conf.default
-          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
